--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Test!</title>
-    <link rel="stylesheet" type="text/css" href="./dist/base.css">
+    <link rel="stylesheet" type="text/css" href="./dist/main.css">
   </head>
   <body>
     <script src="./dist/index.js"></script>
